--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
 
     <string name="folder_root">/EasyFlightBag</string>
     <string name="folder_chklist">/EasyFlightBag/Checklists</string>
+    <string name="chk_menu">Checklists</string>
 
 </resources>
