--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,18 +10,37 @@
     <string name="tab_functions">Calculations</string>
     <string name="tab_settings">Settings</string>
 
-    <string name="create_new">New</string>
-
     <string name="folder_root">/EasyFlightBag</string>
     <string name="folder_chklist">/EasyFlightBag/Checklists</string>
+
     <string name="chk_menu">Checklists</string>
+
     <string name="btn_back">Back</string>
     <string name="btn_save">Save</string>
     <string name="btn_import">Import</string>
     <string name="btn_delete">Delete</string>
+    <string name="btn_start">Start</string>
+    <string name="btn_stop">Stop</string>
+    <string name="btn_clear">Clear</string>
+    <string name="btn_hide">Hide</string>
+    <string name="btn_new">New</string>
+
     <string name="list_name">Checklist title</string>
     <string name="list_name_mandatory">Please enter checklist title here.</string>
     <string name="list_text_hint">Write the tasks to individual lines</string>
-    <string name="hide">hide</string>
+
+
+    <string name="gps_intent_filter">GPSIntent</string>
+    <string name="GPS_disabled">GPS is off</string>
+
+    <string name="gps_latitude">GPSlat</string>
+    <string name="gps_longitude">GPSlon</string>
+    <string name="gps_accuracy">GPSacc</string>
+    <string name="gps_altitude">GPSalt</string>
+    <string name="gps_speed">GPSspe</string>
+    <string name="gps_time">GPStim</string>
+    <string name="gps_bearing">GPSbea</string>
+    <string name="gps_location">gps_location</string>
+
 
 </resources>
