--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
     <string name="app_name">EasyFlightBag</string>
     <string name="gmap_api_key">AIzaSyCxUOrnnZ3KJ5uoTiqBRox_iy0Ifzkjobc</string>
 
-
     <string name="tab_home">Home</string>
     <string name="tab_aip">AIP</string>
     <string name="tab_weather">Weather</string>
@@ -12,10 +11,37 @@
     <string name="tab_functions">Calculations</string>
     <string name="tab_settings">Settings</string>
 
+    <string name="pref_chk_folder">chk_folder</string>
+
     <string name="folder_root">/EasyFlightBag</string>
-    <string name="folder_chklist">/EasyFlightBag/Checklists</string>
+    <string name="folder_chklist">/Checklists</string>
+    <string name="folder_chklist_demo">/Tutorial</string>
+
+    <string name="file_chk_plane">Switch Add and Delete airplane type.txt</string>
+    <string name="file_chk_plane_">Click on the airplane icon\n
+        Select airplane from the list\n
+        Add new airplane by entering the name into the empty field then clicking the + icon\n
+        Click the trashcan icon to delete the airplane</string>
+    <string name="file_chk_add_list">Add new checklist.txt</string>
+    <string name="file_chk_add_list_">Click on the + icon while no checklist is open\n
+        Fill the form\n
+        Write the tasks into individual lines\n
+        Click save to save your new checklist</string>
+    <string name="file_chk_edit_list">Edit and Delete checklist.txt</string>
+    <string name="file_chk_edit_list_">Click on the pen icon while the list is open\n
+        Edit the list\n
+        Save or discract changes\n
+        The trashcan icon allows you to delete the list</string>
 
     <string name="chk_menu">Checklists</string>
+    <string name="chk_no_airplane"></string>
+    <string name="chk_add_airplane">Add new airplane</string>
+    <string name="chk_plane_exists_toast">Airplane already exists</string>
+    <string name="chk_plane_delete_toast">Airplane deleted</string>
+    <string name="chk_plane_delete_fail_toast">Unable to delete airplane</string>
+    <string name="chk_saved_toast">Checklist saved</string>
+    <string name="chk_deleted_toast">Checklist deleted</string>
+    <string name="chk_deleted_fail_toast">Unable to delete checklist</string>
 
     <string name="btn_back">Back</string>
     <string name="btn_save">Save</string>
@@ -26,6 +52,7 @@
     <string name="btn_clear">Clear</string>
     <string name="btn_hide">Hide</string>
     <string name="btn_new">New</string>
+    <string name="btn_add">Add</string>
 
     <string name="list_name">Checklist title</string>
     <string name="list_name_mandatory">Please enter checklist title here.</string>
@@ -44,352 +71,4 @@
     <string name="gps_bearing">GPSbea</string>
     <string name="gps_location">gps_location</string>
 
-
-    <string name="map_style_day">
-        [
-          {
-            "featureType": "administrative.land_parcel",
-            "stylers": [
-              {
-                "visibility": "off"
-              }
-            ]
-          },
-          {
-            "featureType": "administrative.neighborhood",
-            "stylers": [
-              {
-                "visibility": "off"
-              }
-            ]
-          },
-          {
-            "featureType": "poi",
-            "elementType": "labels.text",
-            "stylers": [
-              {
-                "visibility": "off"
-              }
-            ]
-          },
-          {
-            "featureType": "road",
-            "elementType": "labels",
-            "stylers": [
-              {
-                "visibility": "off"
-              }
-            ]
-          },
-          {
-            "featureType": "road.arterial",
-            "elementType": "labels",
-            "stylers": [
-              {
-                "visibility": "off"
-              }
-            ]
-          },
-          {
-            "featureType": "road.highway",
-            "elementType": "geometry",
-            "stylers": [
-              {
-                "saturation": -65
-              }
-            ]
-          },
-          {
-            "featureType": "road.highway",
-            "elementType": "labels",
-            "stylers": [
-              {
-                "visibility": "off"
-              }
-            ]
-          },
-          {
-            "featureType": "road.local",
-            "stylers": [
-              {
-                "visibility": "off"
-              }
-            ]
-          },
-          {
-            "featureType": "transit.station.airport",
-            "elementType": "geometry",
-            "stylers": [
-              {
-                "color": "#fc0303"
-              },
-              {
-                "visibility": "on"
-              },
-              {
-                "weight": 8
-              }
-            ]
-          },
-          {
-            "featureType": "water",
-            "elementType": "labels.text",
-            "stylers": [
-              {
-                "visibility": "off"
-              }
-            ]
-          }
-        ]
-    </string>
-    <string name="map_style_night">
-        [
-          {
-            "elementType": "geometry",
-            "stylers": [
-              {
-                "color": "#242f3e"
-              }
-            ]
-          },
-          {
-            "elementType": "labels.text.fill",
-            "stylers": [
-              {
-                "color": "#746855"
-              }
-            ]
-          },
-          {
-            "elementType": "labels.text.stroke",
-            "stylers": [
-              {
-                "color": "#242f3e"
-              }
-            ]
-          },
-          {
-            "featureType": "administrative.land_parcel",
-            "stylers": [
-              {
-                "visibility": "off"
-              }
-            ]
-          },
-          {
-            "featureType": "administrative.locality",
-            "elementType": "labels.text.fill",
-            "stylers": [
-              {
-                "color": "#d59563"
-              }
-            ]
-          },
-          {
-            "featureType": "administrative.neighborhood",
-            "stylers": [
-              {
-                "visibility": "off"
-              }
-            ]
-          },
-          {
-            "featureType": "poi",
-            "elementType": "labels.text",
-            "stylers": [
-              {
-                "visibility": "off"
-              }
-            ]
-          },
-          {
-            "featureType": "poi",
-            "elementType": "labels.text.fill",
-            "stylers": [
-              {
-                "color": "#d59563"
-              }
-            ]
-          },
-          {
-            "featureType": "poi.park",
-            "elementType": "geometry",
-            "stylers": [
-              {
-                "color": "#263c3f"
-              }
-            ]
-          },
-          {
-            "featureType": "poi.park",
-            "elementType": "labels.text.fill",
-            "stylers": [
-              {
-                "color": "#6b9a76"
-              }
-            ]
-          },
-          {
-            "featureType": "road",
-            "elementType": "geometry",
-            "stylers": [
-              {
-                "color": "#38414e"
-              }
-            ]
-          },
-          {
-            "featureType": "road",
-            "elementType": "geometry.stroke",
-            "stylers": [
-              {
-                "color": "#212a37"
-              }
-            ]
-          },
-          {
-            "featureType": "road",
-            "elementType": "labels",
-            "stylers": [
-              {
-                "visibility": "off"
-              }
-            ]
-          },
-          {
-            "featureType": "road",
-            "elementType": "labels.text.fill",
-            "stylers": [
-              {
-                "color": "#9ca5b3"
-              }
-            ]
-          },
-          {
-            "featureType": "road.arterial",
-            "elementType": "labels",
-            "stylers": [
-              {
-                "visibility": "off"
-              }
-            ]
-          },
-          {
-            "featureType": "road.highway",
-            "elementType": "geometry",
-            "stylers": [
-              {
-                "color": "#746855"
-              },
-              {
-                "saturation": -65
-              }
-            ]
-          },
-          {
-            "featureType": "road.highway",
-            "elementType": "geometry.stroke",
-            "stylers": [
-              {
-                "color": "#1f2835"
-              }
-            ]
-          },
-          {
-            "featureType": "road.highway",
-            "elementType": "labels",
-            "stylers": [
-              {
-                "visibility": "off"
-              }
-            ]
-          },
-          {
-            "featureType": "road.highway",
-            "elementType": "labels.text.fill",
-            "stylers": [
-              {
-                "color": "#f3d19c"
-              }
-            ]
-          },
-          {
-            "featureType": "road.local",
-            "stylers": [
-              {
-                "visibility": "off"
-              }
-            ]
-          },
-          {
-            "featureType": "transit",
-            "elementType": "geometry",
-            "stylers": [
-              {
-                "color": "#2f3948"
-              }
-            ]
-          },
-          {
-            "featureType": "transit.station",
-            "elementType": "labels.text.fill",
-            "stylers": [
-              {
-                "color": "#d59563"
-              }
-            ]
-          },
-          {
-            "featureType": "transit.station.airport",
-            "elementType": "geometry",
-            "stylers": [
-              {
-                "color": "#ffff00"
-              },
-              {
-                "visibility": "on"
-              },
-              {
-                "weight": 8
-              }
-            ]
-          },
-          {
-            "featureType": "water",
-            "elementType": "geometry",
-            "stylers": [
-              {
-                "color": "#17263c"
-              }
-            ]
-          },
-          {
-            "featureType": "water",
-            "elementType": "labels.text",
-            "stylers": [
-              {
-                "visibility": "off"
-              }
-            ]
-          },
-          {
-            "featureType": "water",
-            "elementType": "labels.text.fill",
-            "stylers": [
-              {
-                "color": "#515c6d"
-              }
-            ]
-          },
-          {
-            "featureType": "water",
-            "elementType": "labels.text.stroke",
-            "stylers": [
-              {
-                "color": "#17263c"
-              }
-            ]
-          }
-        ]
-    </string>
 </resources>
