--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,7 +100,7 @@
     <string name="calc_unit_t">T</string>
     <string name="calc_unit_lb">lb</string>
     <string name="calc_unit_l">l</string>
-    <string name="calc_unit_m_cube">m&lt;sup&gt;3&lt;/sup&gt;</string>
+    <string name="calc_unit_m_cube">m^3</string>
     <string name="calc_unit_g_us">US fl. gal.</string>
     <string name="calc_unit_g_imp">imp. gal.</string>
     <string name="calc_unit_oz">fl. oz</string>
@@ -110,7 +110,10 @@
     <string name="calc_unit_c">C</string>
     <string name="calc_unit_f">F</string>
     <string name="calc_unit_k">k</string>
+    <string name="calc_unit_kg_m3">kg/m^3</string>
 
+    <string name="calc_unit_text_density">Density</string>
+    <string name="calc_unit_text_fuel">Fuel/Oil</string>
 
 
 </resources>
