settings - night mode works, TODO: finish aip downloading

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,10 +12,14 @@
     <string name="tab_settings">Settings</string>
 
     <string name="pref_chk_folder">chk_folder</string>
+    <string name="pref_theme">app_theme</string>
+    <string name="pref_aip_last_update">aip_last_update</string>
 
     <string name="folder_root">/EasyFlightBag</string>
     <string name="folder_chklist">/Checklists</string>
     <string name="folder_chklist_demo">/Tutorial</string>
+    <string name="folder_aip">/AIP</string>
+    <string name="folder_cz">/cz</string>
 
     <string name="file_chk_plane">Switch Add and Delete airplane type.txt</string>
     <string name="file_chk_plane_">Click on the airplane icon\n
@@ -120,5 +124,16 @@
     <string name="calc_unit_text_density">Density</string>
     <string name="calc_unit_text_fuel">Fuel/Oil</string>
 
+    <string name="set_theme">Night mode</string>
+    <string name="set_aip">AIP data</string>
+    <string name="set_intent_aip_download">intent_aip_download</string>
+    <string name="set_intent_aip_status">intent_aip_status</string>
+    <string name="set_intent_aip_count">intent_aip_count</string>
+    <string name="set_aip_downloader_start">AIP data downloading started</string>
+    <string name="set_aip_downloader_error">AIP data downloading failed</string>
+    <string name="set_aip_downloader_finished">AIP data downloaded</string>
+    
+    <string name="url_cz_ais">http://lis.rlp.cz/ais_data/aip/control/aip_obsah_en.htm</string>
+    <string name="url_cz_ais_data">http://lis.rlp.cz/ais_data</string>
 
 </resources>
